[project]
name = "bliss_bind"
version = "0.0.1"
description = "Minimal Python binding for Bliss: open-source tool for computing canonical labelings and automorphism groups of graphs."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Arash Badie-Modiri", email = "arashbm@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]

[project.urls]
Homepage = ""


[build-system]
requires = ["scikit-build-core >=0.6.0", "nanobind >=1.7.0"]
build-backend = "scikit_build_core.build"


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.6"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"


[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-requires = ["pytest >=8.0.1", "hypothesis >=6.98.6"]
