[project]
name = "bliss_bind"
version = "0.0.1"
description = "Minimal Python binding for Bliss: open-source tool for computing canonical labelings and automorphism groups of graphs."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Arash Badie-Modiri", email = "arashbm@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = ""


[build-system]
requires = ["scikit-build-core >=0.8.0", "nanobind >=1.7.0"]
build-backend = "scikit_build_core.build"


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.8"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"


[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-requires = ["pytest", "hypothesis"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
archs = ["universal2"]
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"

[tool.cibuildwheel.windows]
archs = ["AMD64"]
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"
